--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ _gaq.push(['_trackPageview']);
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Siyu Wang</h1>
+<h1>Siyu Wang, Ph.D.</h1>
 </div>
 
-<p> I am Siyu Wang and I'm now a 6th year PhD student from <a href="https://genome.duke.edu/education/cbb">the Program of Computational Biology and Bioinformatics</a> at Duke University. I'm also affiliated to <a href="https://www.cs.duke.edu/">the Department of Computer Science</a> at Duke University. </p>
+<p> I am Siyu Wang and I'm now a 1L (first year) JD student at <a href="https://law.ucdavis.edu/">UC Davis School of Law</a>. I'm interested in practicing intellectual property (IP) law in the future and I'm now actively looking for an intern job for summer 2022.
 
-<p> My PhD thesis advisor is <a href="https://users.cs.duke.edu/~brd/">Prof. Bruce R. Donald</a>, who is a <a href="https://en.wikipedia.org/wiki/James_B._Duke_Professor">James B. Duke professor</a> of Computer Science, Mathematics, Chemistry and Biochemistry at Duke University, and also an <a href="https://awards.acm.org/award_winners/donald_4504866">ACM fellow</a> and <a href="https://www.cs.duke.edu/news/articles/2552">IEEE fellow</a>. In Prof. Donald's lab, we work on developing computational protein design algorithm and software, and apply them to real biological systems (most of which are human health related). I am specifically working on a few projects including designing novel therapeutics to cystic fibrosis, methicillin-resistant <i>Staphylococcus aureus</i> (MRSA), and human immunodeficiency virus (HIV). </p>
+<p> Before joining law school, I obtained my PhD degree from <a href="https://genome.duke.edu/education/cbb">the Program of Computational Biology and Bioinformatics</a> at Duke University. I was also affiliated to <a href="https://www.cs.duke.edu/">the Department of Computer Science</a> at Duke University. My PhD thesis advisor was <a href="https://users.cs.duke.edu/~brd/">Prof. Bruce R. Donald</a>, who is a <a href="https://en.wikipedia.org/wiki/James_B._Duke_Professor">James B. Duke professor</a> of Computer Science, Mathematics, Chemistry and Biochemistry at Duke University, and also an <a href="https://awards.acm.org/award_winners/donald_4504866">ACM fellow</a> and <a href="https://www.cs.duke.edu/news/articles/2552">IEEE fellow</a>. Prof. Donald's lab is dedicated to developing computational protein design algorithm and software, and applying them to real biological systems. When I was there I specifically worked on a few human health related projects, including designing novel therapeutics to cystic fibrosis, methicillin-resistant <i>Staphylococcus aureus</i> (MRSA), and human immunodeficiency virus (HIV). </p>
 
-<p> Before joining Duke, I received my bachelor's degree from <a href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a> at China in 2015, majored in control and electrical engineering. When I was there, I worked closely with <a href="https://iiis.tsinghua.edu.cn/zengjy/">Prof. Jianyang Zeng</a>, who is an associate professor at <a href="https://iiis.tsinghua.edu.cn/en/">Institute for Interdisciplinary Information Sciences (IIIS)</a> at Tsinghua University. We worked together on developing novel computational method to model the 3D structure of chromatin, using chromosome conformation capture (3C) data and Hi-C data. </p>
+<p> I received my bachelor's degree from <a href="https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a> in China in 2015, majored in control and electrical engineering. When I was there, I worked closely with <a href="https://iiis.tsinghua.edu.cn/zengjy/">Prof. Jianyang Zeng</a>, who is an associate professor at <a href="https://iiis.tsinghua.edu.cn/en/">Institute for Interdisciplinary Information Sciences (IIIS)</a> at Tsinghua University. We worked together on developing novel computational method to model the 3D structure of chromatin, using chromosome conformation capture (3C) data and Hi-C data. </p>
 
 <p> In my leisure time I like to play video games. I am a huge fan of <a href="https://blog.dota2.com/">Dota 2</a>, and also <a href="https://en.wikipedia.org/wiki/Dota_Auto_Chess">Dota Auto Chess</a>.
 
@@ -47,11 +47,7 @@ _gaq.push(['_trackPageview']);
 
 <h2>Contact</h2>
 <br />
-<p>Email: <a href="mailto:siyu.wang@duke.edu"> siyu.wang@duke.edu </a> <br /> </p>
-
-Office: Levine Science Research Center (LSRC), Room D240 <br />
-        308 Research Dr, Durham, NC 27710 <br />
-
+<p>Email: <a href="mailto:sywa@ucdavis.edu"> sywa@ucdavis.edu </a> <br /> </p>
 
 
 <div id="footer">
