--- a/publication.html
+++ b/publication.html
@@ -39,7 +39,7 @@ _gaq.push(['_trackPageview']);
 <td align="left">
 <ol>
 
-<li><b>Wang, S.</b>, Reeve, S. M., Ojewole, A. A., Frenkel, M. S., Holt, G. T., Gainza, P., Keshipeddy, S., Fowler, V. G., Wright, D. L., & Donald, B. R. (2020). Chiral evasion and stereospecific antifolate resistance in Staphylococcus aureus. <i>bioRxiv</i>. (Preprint, under review by <i>The Journal of Physical Chemistry B</i>.) </li > <br />
+<li><b>Wang, S.</b>, Reeve, S. M., Holt, G. T., Ojewole, A. A., Frenkel, M. S., Gainza, P., Keshipeddy, S., Fowler, V. G., Wright, D. L., & Donald, B. R. (2020). Chiral evasion and stereospecific antifolate resistance in Staphylococcus aureus. <i>bioRxiv</i>. (Preprint, under review by <i>The Journal of Physical Chemistry B</i>.) </li > <br />
 
 <li>Reeve, S. M., Si, D., Krucinska, J., Yan, Y., Viswanathan, K., <b>Wang, S.</b>, Holt, G. T., Frenkel, M. S., Ojewole, A. A., Estrada, A., Agabiti, S. S., Alverson, J. B., Gibson, N. D., Priestley, N. D., Wiemer, A. J., Donald, B. R. & Wright, D. L. (2019). Toward Broad Spectrum DHFR inhibitors Targeting Trimethoprim Resistant Enzymes Identified in Clinical Isolates of Methicillin-Resistant Staphylococcus aureus. <i>ACS infectious diseases</i>, 5(11), 1896-1906.</li> <br />
 
