--- a/publication.html
+++ b/publication.html
@@ -39,13 +39,13 @@ _gaq.push(['_trackPageview']);
 <td align="left">
 <ol>
 
-<li><b>Wang, S.</b>, Reeve, S. M., Holt, G. T., Ojewole, A. A., Frenkel, M. S., Gainza, P., Keshipeddy, S., Fowler, V. G., Wright, D. L., & Donald, B. R. (2020). Chiral evasion and stereospecific antifolate resistance in Staphylococcus aureus. <i>bioRxiv</i>. (Preprint, under review by <i>PLOS Computational Biology</i>.) </li > <br />
+<li><b>Wang, S.</b>, Reeve, S. M., Holt, G. T., Ojewole, A. A., Frenkel, M. S., Gainza, P., Keshipeddy, S., Fowler, V. G., Wright, D. L., & Donald, B. R. (2020). Chiral evasion and stereospecific antifolate resistance in Staphylococcus aureus. <i>PLOS Computational Biology</i>, 18(2), e1009855. </li > <br />
 
-<li>Reeve, S. M., Si, D., Krucinska, J., Yan, Y., Viswanathan, K., <b>Wang, S.</b>, Holt, G. T., Frenkel, M. S., Ojewole, A. A., Estrada, A., Agabiti, S. S., Alverson, J. B., Gibson, N. D., Priestley, N. D., Wiemer, A. J., Donald, B. R. & Wright, D. L. (2019). Toward Broad Spectrum DHFR inhibitors Targeting Trimethoprim Resistant Enzymes Identified in Clinical Isolates of Methicillin-Resistant Staphylococcus aureus. <i>ACS infectious diseases</i>, 5(11), 1896-1906.</li> <br />
+<li>Reeve, S. M., Si, D., Krucinska, J., Yan, Y., Viswanathan, K., <b>Wang, S.</b>, Holt, G. T., Frenkel, M. S., Ojewole, A. A., Estrada, A., Agabiti, S. S., Alverson, J. B., Gibson, N. D., Priestley, N. D., Wiemer, A. J., Donald, B. R. & Wright, D. L. (2019). Toward Broad Spectrum DHFR inhibitors Targeting Trimethoprim Resistant Enzymes Identified in Clinical Isolates of Methicillin-Resistant Staphylococcus aureus. <i>ACS Infectious Diseases</i>, 5(11), 1896-1906.</li> <br />
 
-<li>Hallen, M. A., Martin, J. W., Ojewole, A., Jou, J. D., Lowegard, A. U., Frenkel, M. S., Gainza, P., Nisonoff, H. M., Mukund, A., <b>Wang, S.</b>, Holt, G. T., Zhou, D., Dowd, E., & Donald, B. R. (2018). OSPREY 3.0: Open‐source protein redesign for you, with powerful new features. <i>Journal of computational chemistry</i>, 39(30), 2494-2507. (<b>Cover article</b>.)</li> <br />
+<li>Hallen, M. A., Martin, J. W., Ojewole, A., Jou, J. D., Lowegard, A. U., Frenkel, M. S., Gainza, P., Nisonoff, H. M., Mukund, A., <b>Wang, S.</b>, Holt, G. T., Zhou, D., Dowd, E., & Donald, B. R. (2018). OSPREY 3.0: Open‐source protein redesign for you, with powerful new features. <i>Journal of Computational Chemistry</i>, 39(30), 2494-2507. (<b>Cover article</b>.)</li> <br />
 
-<li><b>Wang, S.</b>, Xu, J., & Zeng, J. (2015). Inferential modeling of 3D chromatin structure. <i>Nucleic acids research</i>, 43(8), e54-e54.</li> <br />
+<li><b>Wang, S.</b>, Xu, J., & Zeng, J. (2015). Inferential modeling of 3D chromatin structure. <i>Nucleic Acids Research</i>, 43(8), e54.</li> <br />
 
 </ol>
 </td>
