--- a/publication.html
+++ b/publication.html
@@ -53,6 +53,11 @@ _gaq.push(['_trackPageview']);
 <td>
 <img src="cover.jpg" alt="" width="200px" height="270px" />
 </td>
+  
+<td>
+<img src="cover2.PNG" alt="" width="200px" height="200px" />
+</td>
+  
 </tr>
 </table>
 
