--- a/publication.html
+++ b/publication.html
@@ -39,6 +39,8 @@ _gaq.push(['_trackPageview']);
 <td align="left">
 <ol>
 
+<li>Holt, G. T., Gorman, J., <b>Wang, S.</b>, Lowegard, A. U., Zhang, B., Liu, T., ... & Donald, B. R. (2023). Improved HIV-1 neutralization breadth and potency of V2-apex antibodies by <i>in silico</i> design. <i>Cell Reports</i>i>, 42(7).</li> <br />
+    
 <li><b>Wang, S.</b>, Reeve, S. M., Holt, G. T., Ojewole, A. A., Frenkel, M. S., Gainza, P., Keshipeddy, S., Fowler, V. G., Wright, D. L., & Donald, B. R. (2022). Chiral evasion and stereospecific antifolate resistance in <i>Staphylococcus aureus</i>. <i>PLOS Computational Biology</i>, 18(2), e1009855. (<b>Cover article</b>.)</li > <br />
 
 <li>Reeve, S. M., Si, D., Krucinska, J., Yan, Y., Viswanathan, K., <b>Wang, S.</b>, Holt, G. T., ... , Donald, B. R. & Wright, D. L. (2019). Toward Broad Spectrum DHFR inhibitors Targeting Trimethoprim Resistant Enzymes Identified in Clinical Isolates of Methicillin-Resistant Staphylococcus aureus. <i>ACS Infectious Diseases</i>, 5(11), 1896-1906.</li> <br />
