--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ _gaq.push(['_trackPageview']);
   
 <p>Email: <a href="mailto:sywa@ucdavis.edu"> sywa@ucdavis.edu </a> </p>
 
-<p>LinkedIn: <a href="https://www.linkedin.com/in/wangsy11/> www.linkedin.com/in/wangsy11/ </a> </p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/wangsy11/"> www.linkedin.com/in/wangsy11/ </a> </p>
             
 <div id="footer">
 <div id="footer-text">
